# gift-exchange

./: CMakeLists.txt  main.cpp  sample-forbidden-assignments.json  sample-persons.json
